--- a/Draw/Controller/Feedback/FeedbackController.xib
+++ b/Draw/Controller/Feedback/FeedbackController.xib
@@ -92,10 +92,10 @@
 					</object>
 					<object class="IBUITableView" id="39274967">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{28, 78}, {264, 350}}</string>
+						<int key="NSvFlags">306</int>
+						<string key="NSFrame">{{28, 70}, {264, 350}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="75847722"/>
+						<reference key="NSNextKeyView" ref="511480514"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -183,10 +183,10 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="75847722">
+					<object class="IBUILabel" id="511480514">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{28, 436}, {272, 21}}</string>
+						<int key="NSvFlags">317</int>
+						<string key="NSFrame">{{28, 423}, {264, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -194,7 +194,7 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">欢迎加入猜猜画画官方QQ群：228119679</string>
+						<string key="IBUIText">官方QQ群：228119679</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -202,13 +202,14 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<int key="IBUITextAlignment">2</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">14</double>
+							<double key="pointSize">12</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">14</double>
+							<double key="NSSize">12</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -266,7 +267,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">qqGroupLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="75847722"/>
+						<reference key="destination" ref="511480514"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -315,7 +316,7 @@
 							<reference ref="1038512283"/>
 							<reference ref="35012611"/>
 							<reference ref="994727983"/>
-							<reference ref="75847722"/>
+							<reference ref="511480514"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -367,7 +368,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="75847722"/>
+						<reference key="object" ref="511480514"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
