--- a/Draw/Controller/Feedback/FeedbackController~iPad.xib
+++ b/Draw/Controller/Feedback/FeedbackController~iPad.xib
@@ -43,6 +43,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="792342712"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -56,6 +57,7 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1003273831"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -69,6 +71,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{148, 65}, {470, 87}}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="532369733"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -82,6 +85,7 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="192410964"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -95,7 +99,8 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{67, 192}, {633, 720}}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
-						<reference key="NSNextKeyView" ref="219446522"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="891585225"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -119,6 +124,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{17, 13}, {74, 74}}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="540727683"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -156,6 +162,7 @@
 						<int key="NSvFlags">306</int>
 						<string key="NSFrame">{{102, 4}, {563, 79}}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="757391224"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -183,11 +190,12 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="219446522">
+					<object class="IBUILabel" id="891585225">
 						<reference key="NSNextResponder" ref="1049623648"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{383, 920}, {317, 35}}</string>
 						<reference key="NSSuperview" ref="1049623648"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -202,6 +210,7 @@
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<int key="IBUITextAlignment">2</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">17</double>
@@ -216,6 +225,7 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="267437970"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -265,7 +275,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">qqGroupLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="219446522"/>
+						<reference key="destination" ref="891585225"/>
 					</object>
 					<int key="connectionID">43</int>
 				</object>
@@ -325,7 +335,7 @@
 							<reference ref="532369733"/>
 							<reference ref="1003273831"/>
 							<reference ref="267437970"/>
-							<reference ref="219446522"/>
+							<reference ref="891585225"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -366,7 +376,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">42</int>
-						<reference key="object" ref="219446522"/>
+						<reference key="object" ref="891585225"/>
 						<reference key="parent" ref="1049623648"/>
 					</object>
 				</array>
@@ -393,7 +403,50 @@
 			<nil key="sourceID"/>
 			<int key="maxID">43</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">FeedbackController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="TitleLabel">UILabel</string>
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="dataTableView">UITableView</string>
+						<string key="qqGroupLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="TitleLabel">
+							<string key="name">TitleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="dataTableView">
+							<string key="name">dataTableView</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="qqGroupLabel">
+							<string key="name">qqGroupLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FeedbackController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
